--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Frontend Mentor | Four card feature section</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <header></header>
